refactor: Move rate limit notification logic to UI layer

--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -1151,6 +1151,7 @@
       "link-updated": "Linkeinstellungen aktualisiert",
       "link-deleted": "Link gelöscht",
       "links-deleted": "Link(s) gelöscht",
+      "error-deleting-links": "Fehler beim Löschen der Links",
       "rate-limit-retry": "Dies dauert länger als erwartet. Bitte warten..."
     }
   },
