--- a/src/app/i18n/locales/fr.json
+++ b/src/app/i18n/locales/fr.json
@@ -1911,8 +1911,7 @@
               "Partage de fichiers protégé par mot de passe",
               "VPN Chiffré",
               "Antivirus"
-            ],
-            "comingSoonFeatures": ["Historique des versions de fichiers"]
+            ]
           },
           "3TB": {
             "title": "Premium",
@@ -1947,7 +1946,7 @@
               "Nettoyeur",
               "Meet (Réunion)"
             ],
-            "comingSoonFeatures": ["Historique des versions de fichiers", "Mail"]
+            "comingSoonFeatures": ["Historique des versions de fichiers", "Mail", "Photos"]
           },
           "1GB": {
             "title": "Gratuit",
@@ -1960,36 +1959,41 @@
           "1TB": {
             "title": "Standard",
             "features": [
-              "1TB de stockage chiffré à connaissance zéro par utilisateur",
+              "1 To de stockage chiffré par utilisateur",
               "Chiffrement post-quantique",
-              "VPN illimité ultra rapide (FR, DE, PL)",
-              "Antivirus",
-              "Sauvegarde de vos fichiers",
-              "Partage de fichiers protégés par mot de passe",
+              "Chiffrement à connaissance nulle",
+              "Authentification à deux facteurs",
+              "Sauvegarde de l'ordinateur",
+              "Partage de fichiers protégé par mot de passe",
               "Inviter, partager et collaborer",
-              "Conformité au RGPD",
-              "Authentification à deux facteurs (2FA)",
-              "Support CLI et WebDav",
-              "Gérer la facturation et les paiements du compte"
-            ],
-            "comingSoonFeatures": ["Nettoyage de l'appareil", "Surveillance du dark web"]
+              "Conformité RGPD",
+              "CLI et WebDAV",
+              "Gestion de l'organisation",
+              "VPN chiffré",
+              "Antivirus",
+              "Nettoyeur"
+            ]
           },
           "2TB": {
             "title": "Pro",
             "features": [
-              "2TB de stockage chiffré à connaissance zéro par utilisateur",
+              "2 To de stockage chiffré par utilisateur",
               "Chiffrement post-quantique",
-              "VPN illimité ultra rapide (FR, DE, PL, CA, UK)",
-              "Antivirus",
-              "Sauvegarde de vos fichiers",
-              "Partage de fichiers protégés par mot de passe",
+              "Chiffrement à connaissance nulle",
+              "Authentification à deux facteurs",
+              "Sauvegarde de l'ordinateur",
+              "Partage de fichiers protégé par mot de passe",
               "Inviter, partager et collaborer",
-              "Conformité au RGPD",
-              "Authentification à deux facteurs (2FA)",
-              "Support CLI, WebDav, Rclone et NAS",
-              "Gérer la facturation et les paiements du compte"
+              "Conformité RGPD",
+              "Prise en charge CLI, WebDAV, Rclone et NAS",
+              "Gestion de l'organisation",
+              "VPN chiffré",
+              "Antivirus",
+              "Nettoyeur",
+              "Meet",
+              "Mail"
             ],
-            "comingSoonFeatures": ["Nettoyage de l'appareil", "Surveillance du dark web", "Meet", "Mail"]
+            "comingSoonFeatures": ["Historique des versions de fichiers"]
           }
         },
         "user": "Utilisateur"
