--- a/src/app/i18n/locales/it.json
+++ b/src/app/i18n/locales/it.json
@@ -2066,36 +2066,41 @@
           "1TB": {
             "title": "Standard",
             "features": [
-              "1TB di archiviazione criptata a conoscenza zero per utente",
+              "1TB di archiviazione crittografata per utente",
               "Crittografia post-quantistica",
-              "VPN illimitata ultraveloce (FR, DE, PL)",
-              "Antivirus",
-              "Backup dei tuoi file",
+              "Crittografia zero-knowledge",
+              "Autenticazione a due fattori",
+              "Backup del computer",
               "Condivisione file protetta da password",
               "Invita, condividi e collabora",
-              "Conformità GDPR",
-              "Autenticazione a due fattori (2FA)",
-              "Supporto CLI e WebDav",
-              "Gestisci fatturazione e pagamenti dell'account"
-            ],
-            "comingSoonFeatures": ["Pulitore dispositivi", "Monitoraggio Dark Web"]
+              "Conformità al GDPR",
+              "CLI e WebDAV",
+              "Gestione dell'organizzazione",
+              "VPN crittografata",
+              "Antivirus",
+              "Pulizia"
+            ]
           },
           "2TB": {
             "title": "Pro",
             "features": [
-              "2TB di archiviazione criptata a conoscenza zero per utente",
+              "2TB di archiviazione crittografata per utente",
               "Crittografia post-quantistica",
-              "VPN illimitata ultraveloce (FR, DE, PL, CA, UK)",
-              "Antivirus",
-              "Backup dei tuoi file",
+              "Crittografia zero-knowledge",
+              "Autenticazione a due fattori",
+              "Backup del computer",
               "Condivisione file protetta da password",
               "Invita, condividi e collabora",
-              "Conformità GDPR",
-              "Autenticazione a due fattori (2FA)",
-              "Supporto CLI, WebDav, Rclone e NAS",
-              "Gestisci fatturazione e pagamenti dell'account"
+              "Conformità al GDPR",
+              "Supporto per CLI, WebDAV, Rclone e NAS",
+              "Gestione dell'organizzazione",
+              "VPN crittografata",
+              "Antivirus",
+              "Pulizia",
+              "Meet",
+              "Email"
             ],
-            "comingSoonFeatures": ["Pulitore dispositivi", "Monitoraggio Dark Web", "Meet", "Mail"]
+            "comingSoonFeatures": ["Cronologia versioni file"]
           }
         },
         "user": "Utente",
