--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -929,7 +929,8 @@
           "errorInviting": "Ошибка при отправке приглашения на {{email}}",
           "userAlreadyInvited": "Пользователь {{email}} уже был приглашен",
           "acceptedError": "Ошибка при принятии приглашения к общей папке",
-          "declinedError": "Ошибка при отклонении приглашения к общей папке"
+          "declinedError": "Ошибка при отклонении приглашения к общей папке",
+          "loadingRoles": "Не удалось загрузить доступные роли. Пожалуйста, попробуйте позже."
         }
       },
       "requestAccess": {
