Revert "[PB-5462] File Version History"

--- a/src/app/i18n/locales/it.json
+++ b/src/app/i18n/locales/it.json
@@ -926,34 +926,6 @@
         "location": "Posizione"
       }
     },
-    "versionHistory": {
-      "title": "Cronologia versioni",
-      "current": "Attuale",
-      "expiresInDays": "Scade tra {{days}} giorni",
-      "autosaveVersions": "{{count}}/{{total}} versioni di salvataggio automatico",
-      "restoreVersion": "Ripristina versione",
-      "downloadVersion": "Scarica versione",
-      "deleteVersion": "Elimina versione",
-      "deleteVersionTitle": "Elimina versione",
-      "deleteButton": "Elimina",
-      "restoreButton": "Ripristina",
-      "downloadError": "Impossibile scaricare la versione",
-      "deleteVersionAdvice": "Questa versione sarà eliminata in modo permanente. \nQuesta azione non può essere annullata.",
-      "deletingVersion": "Eliminazione",
-      "restoreVersionTitle": "Ripristina versione",
-      "restoreVersionAdvice": "Il ripristino di questa versione sostituirà il file corrente e rimuoverà tutte le versioni più recenti. \nUna volta ripristinata, questa azione non può essere annullata.\n\nPuoi scaricare una copia delle versioni più recenti prima del ripristino.",
-      "restoringVersion": "Ripristino",
-      "restoreSuccess": "Versione ripristinata con successo",
-      "restoreError": "Impossibile ripristinare la versione",
-      "deleteSuccess": "Versione eliminata con successo",
-      "deleteError": "Impossibile eliminare la versione",
-      "lockedFeature": {
-        "title": "Funzione bloccata",
-        "description": "Ripristina le versioni precedenti dei tuoi file e monitora le modifiche nel tempo.",
-        "supportedFormats": "Disponibile per file PDF, Word, Excel e CSV nei piani a pagamento.",
-        "upgradeButton": "Aggiorna"
-      }
-    },
     "shareModal": {
       "title": "Condividi \"{{name}}\"",
       "list": {
@@ -1603,8 +1575,7 @@
       "restore": "Ripristinare",
       "deletePermanently": "Eliminare definitivamente",
       "move": "Sposta",
-      "delete": "Elimina",
-      "versionHistory": "Cronologia versioni"
+      "delete": "Elimina"
     },
     "deleteItems": {
       "title": "Eliminare definitivamente?",
