--- a/src/app/i18n/locales/zh.json
+++ b/src/app/i18n/locales/zh.json
@@ -1126,7 +1126,8 @@
     "connectionLostError": "互联网连接丢失",
     "errorLoadingTrashItems": "加载垃圾箱内的项目时出错",
     "updateAvatarError": "更新头像时出错",
-    "featuresUnavailable": "某些功能可能无法使用"
+    "featuresUnavailable": "某些功能可能无法使用",
+    "errorSettingWorkspace": "设置工作区时出错"
   },
   "backups": {
     "backups-from": "来自 {{deviceName}} 的备份",
