feat: show notification when copying the req Id

--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -1426,6 +1426,9 @@
     "logOut": "Abmelden",
     "locked": "Gesperrt"
   },
+  "toastNotification": {
+    "textCopied": "Text in die Zwischenablage kopiert"
+  },
   "drive": {
     "usage": "Verwendung",
     "currentPlan": "Derzeitiger Plan",
