--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -1445,6 +1445,9 @@
     "logOut": "Выйти",
     "locked": "Заблокировано"
   },
+  "toastNotification": {
+    "textCopied": "Текст скопирован в буфер обмена"
+  },
   "drive": {
     "usage": "Использование",
     "currentPlan": "Текущий план",
