--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -1957,6 +1957,7 @@
               "後量子密碼學",
               "零知識加密",
               "雙重身份驗證",
+              "檔案版本控制",
               "電腦備份",
               "密碼保護的檔案共享",
               "邀請、共享和協作",
@@ -1964,7 +1965,7 @@
               "防毒軟體",
               "清理工具 (Cleaner)"
             ],
-            "comingSoonFeatures": ["檔案版本控制"]
+            "comingSoonFeatures": []
           },
           "5TB": {
             "title": "Ultimate (旗艦版)",
@@ -1973,6 +1974,7 @@
               "後量子密碼學",
               "零知識加密",
               "雙重身份驗證",
+              "檔案版本控制",
               "電腦備份",
               "密碼保護的檔案共享",
               "邀請、共享和協作",
@@ -1983,7 +1985,7 @@
               "清理工具 (Cleaner)",
               "會議 (Meet)"
             ],
-            "comingSoonFeatures": ["檔案版本控制", "郵件 (Mail)", "照片(Photos)"]
+            "comingSoonFeatures": ["郵件 (Mail)", "照片(Photos)"]
           },
           "1GB": {
             "title": "Free (免費版)",
@@ -2018,6 +2020,7 @@
               "後量子加密",
               "零知識加密",
               "雙重身份驗證",
+              "檔案版本控制",
               "備份您的電腦",
               "受密碼保護的檔案分享",
               "邀請、分享與協作",
@@ -2029,8 +2032,7 @@
               "清理工具",
               "Meet",
               "郵件"
-            ],
-            "comingSoonFeatures": ["檔案版本控制"]
+            ]
           }
         },
         "user": "用戶"
