--- a/src/app/i18n/locales/zh.json
+++ b/src/app/i18n/locales/zh.json
@@ -1995,14 +1995,14 @@
               "后量子密码学",
               "零知识加密",
               "两步验证",
+              "文件版本控制",
               "电脑备份",
               "密码保护的文件共享",
               "邀请、共享和协作",
               "加密 VPN",
               "杀毒软件",
               "清理工具 (Cleaner)"
-            ],
-            "comingSoonFeatures": ["文件版本控制"]
+            ]
           },
           "5TB": {
             "title": "Ultimate (旗舰版)",
@@ -2011,6 +2011,7 @@
               "后量子密码学",
               "零知识加密",
               "两步验证",
+              "文件版本控制",
               "电脑备份",
               "密码保护的文件共享",
               "邀请、共享和协作",
@@ -2021,7 +2022,7 @@
               "清理工具 (Cleaner)",
               "会议 (Meet)"
             ],
-            "comingSoonFeatures": ["文件版本控制", "邮件 (Mail)", "照片 (Photos)"]
+            "comingSoonFeatures": ["邮件 (Mail)", "照片 (Photos)"]
           },
           "1GB": {
             "title": "Free (免费版)",
@@ -2056,6 +2057,7 @@
               "后量子加密",
               "零知识加密",
               "双重身份验证",
+              "文件版本控制",
               "备份您的计算机",
               "受密码保护的文件共享",
               "邀请、共享与协作",
@@ -2067,8 +2069,7 @@
               "清理工具",
               "Meet",
               "邮件"
-            ],
-            "comingSoonFeatures": ["文件版本控制"]
+            ]
           }
         },
         "user": "用户"
