--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -1947,14 +1947,14 @@
               "Post-Quanten-Verschlüsselung",
               "Zero-Knowledge-Verschlüsselung",
               "Zwei-Faktor-Authentifizierung",
+              "Dateiversionierung",
               "Computer-Backup",
               "Passwortgeschütztes Teilen von Dateien",
               "Einladen, teilen & zusammenarbeiten",
               "Verschlüsseltes VPN",
               "Antivirus",
               "Cleaner (Bereinigungstool)"
-            ],
-            "comingSoonFeatures": ["Dateiversionierung"]
+            ]
           },
           "5TB": {
             "title": "Ultimate (Ultimativ)",
@@ -1963,6 +1963,7 @@
               "Post-Quanten-Verschlüsselung",
               "Zero-Knowledge-Verschlüsselung",
               "Zwei-Faktor-Authentifizierung",
+              "Dateiversionierung",
               "Computer-Backup",
               "Passwortgeschütztes Teilen von Dateien",
               "Einladen, teilen & zusammenarbeiten",
@@ -1973,7 +1974,7 @@
               "Cleaner (Bereinigungstool)",
               "Meet (Videokonferenz)"
             ],
-            "comingSoonFeatures": ["Dateiversionierung", "Mail", "Fotos"]
+            "comingSoonFeatures": ["Mail", "Fotos"]
           },
           "1GB": {
             "title": "Kostenlos",
@@ -2008,6 +2009,7 @@
               "Post-Quanten-Verschlüsselung",
               "Zero-Knowledge-Verschlüsselung",
               "Zwei-Faktor-Authentifizierung",
+              "Dateiversionierung",
               "Computer-Backup",
               "Passwortgeschützte Dateifreigabe",
               "Einladen, teilen & zusammenarbeiten",
@@ -2019,8 +2021,7 @@
               "Cleaner",
               "Meet",
               "Mail"
-            ],
-            "comingSoonFeatures": ["Dateiversionierung"]
+            ]
           }
         },
         "user": "Benutzer"
