--- a/src/app/i18n/locales/es.json
+++ b/src/app/i18n/locales/es.json
@@ -2007,14 +2007,14 @@
               "Criptografía postcuántica",
               "Cifrado de conocimiento cero",
               "Autenticación de dos factores",
+              "Versionado de archivos",
               "Copia de seguridad",
               "Comparte archivos con contraseña",
               "Invitar, compartir y colaborar",
               "VPN Cifrada",
               "Antivirus",
               "Cleaner"
-            ],
-            "comingSoonFeatures": ["Versionado de archivos"]
+            ]
           },
           "5TB": {
             "title": "Ultimate",
@@ -2023,6 +2023,7 @@
               "Criptografía postcuántica",
               "Cifrado de conocimiento cero",
               "Autenticación de dos factores",
+              "Versionado de archivos",
               "Copia de seguridad",
               "Comparte archivos con contraseña",
               "Invitar, compartir y colaborar",
@@ -2033,7 +2034,7 @@
               "Cleaner",
               "Meet"
             ],
-            "comingSoonFeatures": ["Versionado de archivos", "Mail", "Fotos"]
+            "comingSoonFeatures": ["Mail", "Fotos"]
           },
           "1GB": {
             "title": "Gratis",
@@ -2068,6 +2069,7 @@
               "Cifrado poscuántico",
               "Cifrado de conocimiento cero",
               "Autenticación de dos factores",
+              "Versionado de archivos",
               "Copia de seguridad del ordenador",
               "Intercambio de archivos protegido por contraseña",
               "Invitar, compartir y colaborar",
@@ -2079,8 +2081,7 @@
               "Limpiador",
               "Meet",
               "Correo"
-            ],
-            "comingSoonFeatures": ["Versionado de archivos"]
+            ]
           }
         },
         "user": "usuario"
