--- a/src/app/i18n/locales/fr.json
+++ b/src/app/i18n/locales/fr.json
@@ -1953,14 +1953,14 @@
               "Chiffrement Post-Quantique",
               "Chiffrement Zéro-Connaissance",
               "Authentification à Deux Facteurs",
+              "Historique des versions de fichiers",
               "Sauvegarde de votre ordinateur",
               "Partage de fichiers protégé par mot de passe",
               "Inviter, partager et collaborer",
               "VPN Chiffré",
               "Antivirus",
               "Nettoyeur"
-            ],
-            "comingSoonFeatures": ["Historique des versions de fichiers"]
+            ]
           },
           "5TB": {
             "title": "Ultimate (Ultime)",
@@ -1969,6 +1969,7 @@
               "Chiffrement Post-Quantique",
               "Chiffrement Zéro-Connaissance",
               "Authentification à Deux Facteurs",
+              "Historique des versions de fichiers",
               "Sauvegarde de votre ordinateur",
               "Partage de fichiers protégé par mot de passe",
               "Inviter, partager et collaborer",
@@ -1979,7 +1980,7 @@
               "Nettoyeur",
               "Meet (Réunion)"
             ],
-            "comingSoonFeatures": ["Historique des versions de fichiers", "Mail", "Photos"]
+            "comingSoonFeatures": ["Mail", "Photos"]
           },
           "1GB": {
             "title": "Gratuit",
@@ -2014,6 +2015,7 @@
               "Chiffrement post-quantique",
               "Chiffrement à connaissance nulle",
               "Authentification à deux facteurs",
+              "Historique des versions de fichiers",
               "Sauvegarde de l'ordinateur",
               "Partage de fichiers protégé par mot de passe",
               "Inviter, partager et collaborer",
@@ -2025,8 +2027,7 @@
               "Nettoyeur",
               "Meet",
               "Mail"
-            ],
-            "comingSoonFeatures": ["Historique des versions de fichiers"]
+            ]
           }
         },
         "user": "Utilisateur"
